--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rails-watch-list",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -9,7 +10,9 @@
     "bootstrap": "4.6",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "stimulus": "^3.0.1",
     "turbolinks": "^5.2.0",
+    "typed.js": "^2.0.12",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
