--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "stimulus": "^3.0.1",
+    "swiper": "^8.1.4",
     "turbolinks": "^5.2.0",
     "typed.js": "^2.0.12",
     "webpack": "^4.46.0",
